--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -18,8 +18,6 @@
                 x.style.display = "block";
             }
         }
-        function clearOnLoad() {document.body.innerHTML = "";}
-      clearOnLoad();
     </script>
 </head>
 
@@ -30,25 +28,31 @@
             
             <div id="myLinks">
                 <a href="/"><p >Home</p></a>
-                <a href="/searches/new"><p>Search the Google Books API</p></a>
+                <a href="#" class="active"><p class="active">Search the Google Books API</p></a>
             </div>
             <a href="javascript:void(0);" class="icon" onclick="menu()">
                 <i class="fa fa-bars fa-4x"></i>
             </a>
             <div class="title">
-                <p>Search Results</p>
+                <p>Search by Title or Author</p>
             </div>
         </div>
     </header>
     <main>
-        <% data.forEach(data =>{ %>
-            <div class="show container flexCol">
-                <img src="<%= data.url %>" alt="">
-                <h1><%= data.title %></h1>
-                <h3><%= data.author %></h3>
-                <p><%= data.desc %></p>
-            </div>
-        <% }) %>
+        <div class="container">
+            <form action="/searches" method="POST">
+                <input id="search" type="text" name="search" placeholder="Enter a title or author" required>
+                <div class="radio flex">
+                    <label for="">Title</label>
+                    <input type="radio" name="searchType" required value="intitle" checked>
+                </div>
+                <div class="radio flex">
+                    <label for="">Author</label>
+                    <input type="radio" name="searchType" required value="inauthor">
+                </div>
+                <button id="searchButton">Search the Google Books API</button>
+            </form>
+        </div>
     </main>
     <footer>
         <ul>
