all tasks for lab12

--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -1,101 +1,4 @@
-@media (max-width: 767px) {
-  header h1 {
-    font-size: 30px;
-    line-height: 100px;
-    margin-left: 16px;
-  }
-  .topnav {
-    overflow: hidden;
-    background-color: black;
-    position: relative;
-  }
-  .topnav #myLinks {
-    display: none;
-    background-color: black;
-    border: solid gray 2px;
-  }
-  .topnav a {
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    display: block;
-    text-align: center;
-  }
-  .topnav p {
-    font-size: 30px;
-  }
-  .topnav a.icon {
-    background: black;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  .active {
-    background-color: white;
-    color: black;
-  }
-  .active p {
-    color: black;
-  }
-  .title {
-    height: 80px;
-    background-color: rgb(66, 66, 66);
-    color: white;
-    text-align: center;
-  }
-  .title p {
-    line-height: 80px;
-    font-size: 25px;
-  }
-  #search {
-    width: 80%;
-    height: 70px;
-    border-radius: 5px;
-    background-color: white;
-    font-size: 22px;
-  }
-  .radio{
-    color: black;
-    text-align: left;
-    margin: 35px auto;
-    width: 80%;
-    height: 70px;
-    background-color: rgb(248, 233, 233);
-    border-radius: 5px;
-    font-size: 22px;
-  }
-  label{
-    margin: 0 20px;
-    line-height: 70px;
-    width: 15%;
-  }
-  #searchButton{
-    width: 80%;
-    height: 70px;
-    background-color: black;
-    color:white;
-    font-size: 22px;
-  }
-  .show{
-    border: solid black 3px;
-    margin: 50px 10%;
-    height: 80%;
-    font-size: 20px;
-    background-color: rgb(207, 206, 206);
-    color: black;
-  }
-  .show img {
-    margin: 40px;
-    width: 50%;
-    height: 370px;
-  }
-  .show p{
-    margin: 15px;
-  }
-}
+@import 'modules/menu.css';
+@import 'modules/homepage.css';
+@import 'modules/searches.css';
+@import 'modules/details.css';
