--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,51 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Books</title>
-    <link rel="icon" href="https://www.freeiconspng.com/uploads/book-icon--icon-search-engine-6.png" type="image/png"
-        sizes="16x16">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script>
-        function menu() {
-            var x = document.getElementById("myLinks");
-            if (x.style.display === "block") {
-                x.style.display = "none";
-            } else {
-                x.style.display = "block";
-            }
-        }
-    </script>
-</head>
-
+<%- include('../layout/head') %>
 <body>
-    <header>
-        <div class="center topnav">
-            <h1>Best Books!</h1>
-            
-            <div id="myLinks">
-                <a href="#" class="active"><p class="active">Home</p></a>
-                <a href="/searches/new"><p>Search the Google Books API</p></a>
-            </div>
-            <a href="javascript:void(0);" class="icon" onclick="menu()">
-                <i class="fa fa-bars fa-4x"></i>
-            </a>
-        </div>
-    </header>
+    <%- include('../layout/header') %>
     <main>
-        <h1 style="font-size: 40px; text-align: center;">Welcome</h1>
+        <div class="title">
+            <p><strong id="savedBooks"><%= data.length %></strong> Saved Books</p>
+        </div>
+        <% data.forEach(data =>{ %>
+            <div class="show container flexCol">
+                <img src="<%= data.image_url %>" alt="">
+                <h1><%= data.title %></h1>
+                <h3><%= data.author %></h3>
+                <form class="postForm" action="/books/<%=data.id%>" method="get">
+                    <button id="detailsButton">View Details</button>
+                </form>
+            </div>
+        <% }) %>
     </main>
-    <footer>
-        <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-        </ul>
-    </footer>
+    <%- include('../layout/footer') %>
 </body>
 
 </html>
