--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -1,63 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Books</title>
-    <link rel="icon" href="https://www.freeiconspng.com/uploads/book-icon--icon-search-engine-6.png" type="image/png"
-        sizes="16x16">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/styles/styles.css">
-    <script>
-        function menu() {
-            var x = document.getElementById("myLinks");
-            if (x.style.display === "block") {
-                x.style.display = "none";
-            } else {
-                x.style.display = "block";
-            }
-        }
-        function clearOnLoad() {document.body.innerHTML = "";}
-      clearOnLoad();
-    </script>
-</head>
-
+<%- include('../../layout/head') %>
 <body>
-    <header>
-        <div class="center topnav">
-            <h1>Best Books!</h1>
-            
-            <div id="myLinks">
-                <a href="/"><p >Home</p></a>
-                <a href="/searches/new"><p>Search the Google Books API</p></a>
-            </div>
-            <a href="javascript:void(0);" class="icon" onclick="menu()">
-                <i class="fa fa-bars fa-4x"></i>
-            </a>
-            <div class="title">
-                <p>Search Results</p>
-            </div>
-        </div>
-    </header>
+    <%- include('../../layout/header') %>
     <main>
-        <% data.forEach(data =>{ %>
+        <div class="title">
+            <p>Search Results</p>
+        </div>
+        <% data.forEach((data,indexx) =>{ %>
             <div class="show container flexCol">
-                <img src="<%= data.url %>" alt="">
+                <img src="<%= data.image_url %>" alt="">
                 <h1><%= data.title %></h1>
                 <h3><%= data.author %></h3>
-                <p><%= data.desc %></p>
+                <p><%= data.description %></p>
+                <form class="postFormSelectedBook" action="/books" method="POST">
+                    <input type="hidden" value="<%= indexx %>" name="id">
+                    <button id="selectButton">Select this Book</button>
+                </form>
             </div>
         <% }) %>
     </main>
-    <footer>
-        <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-        </ul>
-    </footer>
+    <%- include('../../layout/footer') %>
 </body>
 
 </html>
+
+
+
