--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -4,7 +4,7 @@
 <body>
     <%- include('../layout/header') %>
     <main>
-        <h1 style="font-size: 40px; text-align: center;">Error, not found!</h1>
+        <h1 style="font-size: 40px; text-align: center;"><%= data %></h1>
     </main>
     <%- include('../layout/footer') %>
 </body>
