--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -2,3 +2,4 @@
 @import 'modules/homepage.css';
 @import 'modules/searches.css';
 @import 'modules/details.css';
+@import 'modules/updateDetails.css';
