--- a/public/styles/modules/details.css
+++ b/public/styles/modules/details.css
@@ -1,7 +1,7 @@
 @media (max-width: 767px) {
     #savedBooks {
-        color: darkred;
-        background-color: white;
+        color: goldenrod;
+        background-color: black;
         border-radius: 3000px;
         font-size: 40px;
         font-weight: bold;
@@ -13,22 +13,22 @@
     #detailsButton {
         width: 100%;
         background-color: black;
-        color: white;
+        color: goldenrod;
         height: 100px;
         font-size: 30px;
         border-radius: 10px;
     }
     .detailsBook {
-        margin: 50px;
+        /* margin: 50px; */
         margin-top: 110px;
         height: 70%;
-        position: fixed;
+        /* position: fixed; */
         display: flex;
         justify-content: center;
         text-align: center;
     }
     .detailsBook p:first-of-type {
-        background-color: white;
+        background-color: goldenrod;
         padding: 10px;
         max-width: 80%;
     }
@@ -39,7 +39,7 @@
     #selectButton {
         width: 100%;
         background-color: black;
-        color: white;
+        color: goldenrod;
         height: 100px;
         font-size: 30px;
         border-radius: 10px;
