--- a/public/styles/modules/homepage.css
+++ b/public/styles/modules/homepage.css
@@ -1,18 +1,18 @@
 @media (max-width: 767px) {
     header h1 {
-        font-size: 30px;
+        font-size: 40px;
         line-height: 100px;
         margin-left: 16px;
     }
     .title {
         height: 80px;
         background-color: rgb(66, 66, 66);
-        color: white;
+        color: goldenrod;
         text-align: center;
-        margin-bottom: 100px;
+        margin-bottom: 50px;
     }
     .title p {
         line-height: 80px;
-        font-size: 45px;
+        font-size: 35px;
     }
 }
