--- a/public/styles/modules/searches.css
+++ b/public/styles/modules/searches.css
@@ -25,18 +25,20 @@
         width: 80%;
         height: 70px;
         background-color: black;
-        color: white;
+        color: goldenrod;
         font-size: 22px;
     }
     .show {
         width: 80%;
-        border: solid black 3px;
-        margin: 50px auto;
+        border: solid goldenrod 2px;
+        border-radius: 50px;
+        margin: 0px auto;
         height: 80%;
         font-size: 20px;
         background-color: rgb(207, 206, 206);
         color: black;
         padding: 20px;
+        margin-bottom: 100px;
     }
     .show img {
         margin: 30px;
