--- a/public/styles/modules/searches.css
+++ b/public/styles/modules/searches.css
@@ -27,6 +27,7 @@
         background-color: black;
         color: goldenrod;
         font-size: 22px;
+        margin-bottom: 80px;
     }
     .show {
         width: 80%;
