--- a/views/layout/head.ejs
+++ b/views/layout/head.ejs
@@ -6,5 +6,6 @@
         sizes="16x16">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../styles/styles.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="../js/app.js"></script>
 </head>
