--- a/views/pages/books/detail.ejs
+++ b/views/pages/books/detail.ejs
@@ -4,7 +4,7 @@
     <h3><%= data.author %></h3>
     <p><%= data.description %></p>
     <p>ISBN: <%= data.isbn %></p>
-    <p>Bookshelf: <%= data.bookshelf %></p>
+    <p>Bookshelf: <%= data3.name %></p>
     <div class="btnForm">
         <div style="width: 40%;">
             <button class="udButton" onclick="openForm()">Update</button>
