--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -8,7 +8,7 @@
             <p>Search Results</p>
         </div>
         <% data.forEach((data,indexx) =>{ %>
-            <div class="show container flexCol">
+            <div class="container flexCol show">
                 <img src="<%= data.image_url %>" alt="">
                 <h1><%= data.title %></h1>
                 <h3><%= data.author %></h3>
