--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -26,10 +26,26 @@
 }
 
 @media  (min-width: 768px){
-    body{
-        display: none;
+    header{
+        height: 100px;
+        background-color: black;
+        color: white;
+        position: fixed;
+        width: 100%;
     }
-    #alert{
-        display: inline;
+    body{
+        background-color: gray;
+        color: white;
+    }
+    main{
+        padding-top: 100px;
+    }
+    footer{
+        height: 30px;
+        background-color: black;
+        color: white;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
     }
 }
