--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -23,3 +23,24 @@ body {
 
     }
 }
+
+@media  (min-width: 768px){
+    .container {
+        max-width: 80%;
+        text-align: center;
+        margin: 0 auto;
+    }
+    .center {
+        align-items: center;
+    }
+    .flex{
+        display: flex;
+        align-items: center;
+    }
+    .flexCol{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+
+    }
+}
