--- a/public/styles/modules/details.css
+++ b/public/styles/modules/details.css
@@ -1,11 +1,5 @@
 @media (max-width: 767px) {
-    #savedBooks {
-        color: goldenrod;
-        background-color: black;
-        border-radius: 3000px;
-        font-size: 40px;
-        font-weight: bold;
-    }
+    
     .postForm {
         width: 50%;
         margin: 30px;
@@ -42,5 +36,62 @@
         height: 100px;
         font-size: 30px;
         border-radius: 10px;
+    }
+    .udButton{
+        height: 50px;
+        width: 80%;
+        margin-bottom: 20px;
+        background-color: goldenrod;
+        color: black;
+        font-weight: bold;
+        font-size: 30px;
+    }
+}
+
+@media  (min-width: 768px){
+    .postForm {
+        width: 50%;
+        margin: 30px;
+    }
+    #detailsButton {
+        width: 100%;
+        background-color: black;
+        color: goldenrod;
+        height: 100px;
+        font-size: 30px;
+        border-radius: 10px;
+    }
+    .detailsBook {
+        margin-top: 110px;
+        height: 70%;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    }
+    .detailsBook p:first-of-type {
+        background-color: goldenrod;
+        padding: 10px;
+        max-width: 80%;
+    }
+    .postFormSelectedBook {
+        width: 80%;
+        margin: 30px;
+    }
+    #selectButton {
+        width: 100%;
+        background-color: black;
+        color: goldenrod;
+        height: 100px;
+        font-size: 30px;
+        border-radius: 10px;
+    }
+    .udButton{
+        height: 50px;
+        width: 80%;
+        margin-bottom: 20px;
+        background-color: goldenrod;
+        color: black;
+        font-weight: bold;
+        font-size: 30px;
     }
 }
