--- a/public/styles/modules/homepage.css
+++ b/public/styles/modules/homepage.css
@@ -15,4 +15,37 @@
         line-height: 80px;
         font-size: 25px;
     }
+    #savedBooks {
+        color: goldenrod;
+        background-color: black;
+        border-radius: 3000px;
+        font-size: 40px;
+        font-weight: bold;
+    }
+}
+
+@media  (min-width: 768px){
+    header h1 {
+        font-size: 40px;
+        line-height: 100px;
+        margin-left: 16px;
+    }
+    .title {
+        height: 80px;
+        background-color: rgb(66, 66, 66);
+        color: goldenrod;
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    .title p {
+        line-height: 80px;
+        font-size: 45px;
+    }
+    #savedBooks {
+        color: goldenrod;
+        background-color: black;
+        border-radius: 3000px;
+        font-size: 40px;
+        font-weight: bold;
+    }
 }
