--- a/public/styles/modules/searches.css
+++ b/public/styles/modules/searches.css
@@ -57,3 +57,66 @@
         margin: 15px;
     }
 }
+
+@media  (min-width: 768px){
+    #search {
+        width: 80%;
+        height: 70px;
+        border-radius: 5px;
+        background-color: white;
+        font-size: 32px;
+    }
+    .radio {
+        color: black;
+        text-align: left;
+        margin: 35px auto;
+        width: 80%;
+        height: 70px;
+        background-color: rgb(248, 233, 233);
+        border-radius: 5px;
+        font-size: 32px;
+    }
+    label {
+        margin: 0 20px;
+        line-height: 70px;
+        width: 15%;
+    }
+    #searchButton {
+        width: 80%;
+        height: 70px;
+        background-color: black;
+        color: goldenrod;
+        font-size: 32px;
+        margin-bottom: 80px;
+    }
+    .show {
+        max-width: 30%;
+        min-width: 750px;
+        border: solid goldenrod 2px;
+        border-radius: 50px;
+        margin: 0px auto;
+        height: 80%;
+        font-size: 30px;
+        background-color: rgb(207, 206, 206);
+        color: black;
+        padding: 20px;
+        margin-bottom: 100px;
+    }
+    .show img {
+        margin: 30px;
+        width: 40%;
+        max-width: 300px;
+        height: 370px;
+    }
+    .show h1 {
+        font-size: 40px;
+        font-weight: bold;
+    }
+    .show h3 {
+        font-size: 34px;
+        text-decoration: underline;
+    }
+    .show p {
+        margin: 12px;
+    }
+}
